@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-22 22:48:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-109
+
+    Summary:
+      More tests
+    Revision:
+      missingh--head--0.5--patch-109
+
+
+    modified files:
+     ChangeLog testsrc/ConfigParser/Maintest.hs
+
+
 2004-11-22 22:43:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-108
 
     Summary:
